Fixed the pre-loader from displaying with a scrollbar

--- a/web/assets/custom/sass/_variables.scss
+++ b/web/assets/custom/sass/_variables.scss
@@ -33,3 +33,9 @@ $basecamp_color: hsla(121, 38%, 58%, 1);     // #6bbd6d
 $tumblr_color: hsla(210, 37%, 30%, 1);     // #304c68
 $foursquare_color: hsla(206, 72%, 45%, 1);     // #207dc5
 $box_color: hsla(204, 83%, 40%, 1);     // #1277bc
+
+// Contextual colors
+
+$error: #f44336;
+$warning: #ffc107;
+$success: #4caf50;
